--- a/web/app/themes/waq2015/assets/sass/mediaqueries/_xsmall.sass
+++ b/web/app/themes/waq2015/assets/sass/mediaqueries/_xsmall.sass
@@ -49,6 +49,20 @@
 
   //
   //
+  // FEATURES
+  .features
+    .infos
+      font-size: 0.625em
+      .touch &
+        > *
+          padding: 10px
+
+      .favorite
+        font-size: 1em
+
+
+  //
+  //
   // BLOG
   .feed
     .right
