--- a/web/app/themes/waq2015/assets/sass/partials/_pages.sass
+++ b/web/app/themes/waq2015/assets/sass/partials/_pages.sass
@@ -174,6 +174,8 @@ section.intro
     float: right
     margin-right: 0
     margin-left: 1em
+    > *
+      padding-left: 0.438em
 
   .speaker
     margin-bottom: 0.5em
